--- a/Main.xaml
+++ b/Main.xaml
@@ -127,8 +127,8 @@
     </ui:InvokeWorkflowFile>
     <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="MeteoFrance - Invoke Workflow File (MeteoFrance.xaml)" sap:VirtualizedContainerService.HintSize="416,204" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="MeteoFrance.xaml">
       <ui:InvokeWorkflowFile.Arguments>
-        <InArgument x:TypeArguments="x:String" x:Key="str_city" />
-        <OutArgument x:TypeArguments="x:Boolean" x:Key="bool_isRaining" />
+        <InArgument x:TypeArguments="x:String" x:Key="str_city">[str_nomVille]</InArgument>
+        <OutArgument x:TypeArguments="x:Boolean" x:Key="bool_isRaining">[bool_isRainingMF]</OutArgument>
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
     <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="AccuWeather - Appeler le fichier de flux de travail (AccuWeather.xaml)" sap:VirtualizedContainerService.HintSize="416,195" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_3" UnSafe="False" WorkflowFileName="AccuWeather.xaml">
