--- a/Main.xaml
+++ b/Main.xaml
@@ -41,6 +41,7 @@
       <x:String>UiPath.UIAutomationNext.Activities.Models</x:String>
       <x:String>System.Reflection</x:String>
       <x:String>System.Linq.Expressions</x:String>
+      <x:String>System.Numerics</x:String>
     </sco:Collection>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
@@ -100,9 +101,10 @@
       <AssemblyReference>System.Collections</AssemblyReference>
       <AssemblyReference>System.Collections.NonGeneric</AssemblyReference>
       <AssemblyReference>System.Linq.Expressions</AssemblyReference>
+      <AssemblyReference>System.Runtime.Numerics</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="953,1422" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="953,1536" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="str_nomVille" />
       <Variable x:TypeArguments="x:Boolean" Name="bool_isRainingMF" />
@@ -110,47 +112,56 @@
       <Variable x:TypeArguments="x:Boolean" Name="bool_isRainingAW" />
       <Variable x:TypeArguments="x:Boolean" Name="bool_isRainingPC" />
       <Variable x:TypeArguments="x:Boolean" Name="bool_isRainingTameteo" />
+      <Variable x:TypeArguments="x:Int32" Name="int32_chancesPrecipitations" />
     </Sequence.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Input Dialog" sap:VirtualizedContainerService.HintSize="416,271" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="Entrez le nom de la ville à rechercher" Title="RainingTool">
+    <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Input Dialog" sap:VirtualizedContainerService.HintSize="434,271" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="Entrez le nom de la ville à rechercher" Title="RainingTool">
       <ui:InputDialog.Result>
         <OutArgument x:TypeArguments="x:String">[str_nomVille]</OutArgument>
       </ui:InputDialog.Result>
     </ui:InputDialog>
-    <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="Google - Invoke Workflow File (Google.xaml)" sap:VirtualizedContainerService.HintSize="416,204" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="Google.xaml">
+    <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="Google - Invoke Workflow File (Google.xaml)" sap:VirtualizedContainerService.HintSize="434,204" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="Google.xaml">
       <ui:InvokeWorkflowFile.Arguments>
         <InArgument x:TypeArguments="x:String" x:Key="str_city">[str_nomVille]</InArgument>
         <OutArgument x:TypeArguments="x:Boolean" x:Key="bool_isRaining">[bool_isRainingGoogle]</OutArgument>
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
-    <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="MeteoFrance - Invoke Workflow File (MeteoFrance.xaml)" sap:VirtualizedContainerService.HintSize="416,204" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="MeteoFrance.xaml">
+    <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="MeteoFrance - Invoke Workflow File (MeteoFrance.xaml)" sap:VirtualizedContainerService.HintSize="434,204" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="MeteoFrance.xaml">
       <ui:InvokeWorkflowFile.Arguments>
         <InArgument x:TypeArguments="x:String" x:Key="str_city">[str_nomVille]</InArgument>
         <OutArgument x:TypeArguments="x:Boolean" x:Key="bool_isRaining">[bool_isRainingMF]</OutArgument>
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
-    <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="AccuWeather - Appeler le fichier de flux de travail (AccuWeather.xaml)" sap:VirtualizedContainerService.HintSize="416,204" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_3" UnSafe="False" WorkflowFileName="AccuWeather.xaml">
+    <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="AccuWeather - Appeler le fichier de flux de travail (AccuWeather.xaml)" sap:VirtualizedContainerService.HintSize="434,204" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_3" UnSafe="False" WorkflowFileName="AccuWeather.xaml">
       <ui:InvokeWorkflowFile.Arguments>
         <InArgument x:TypeArguments="x:String" x:Key="str_city">[str_nomVille]</InArgument>
         <OutArgument x:TypeArguments="x:Boolean" x:Key="bool_IsRaining">[bool_isRainingAW]</OutArgument>
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
-    <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="PleinChamp - Appeler le fichier de flux de travail (PleinChamp.xaml)" sap:VirtualizedContainerService.HintSize="416,204" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_4" UnSafe="False" WorkflowFileName="PleinChamp.xaml">
+    <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="PleinChamp - Appeler le fichier de flux de travail (PleinChamp.xaml)" sap:VirtualizedContainerService.HintSize="434,204" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_4" UnSafe="False" WorkflowFileName="PleinChamp.xaml">
       <ui:InvokeWorkflowFile.Arguments>
         <InArgument x:TypeArguments="x:String" x:Key="str_city">[str_nomVille]</InArgument>
         <OutArgument x:TypeArguments="x:Boolean" x:Key="bool_IsRaining">[bool_isRainingPC]</OutArgument>
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
-    <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="Tameteo - Invoke Workflow File (Tameteo.xaml)" sap:VirtualizedContainerService.HintSize="416,204" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_5" UnSafe="False" WorkflowFileName="Tameteo.xaml">
+    <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="Tameteo - Invoke Workflow File (Tameteo.xaml)" sap:VirtualizedContainerService.HintSize="434,204" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_5" UnSafe="False" WorkflowFileName="Tameteo.xaml">
       <ui:InvokeWorkflowFile.Arguments>
         <InArgument x:TypeArguments="x:String" x:Key="str_city">[str_nomVille]</InArgument>
         <OutArgument x:TypeArguments="x:Boolean" x:Key="bool_isRaining">[bool_isRainingTameteo]</OutArgument>
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
-    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="416,108" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;Pluie détectée :&quot; &amp;Environment.NewLine +&#xD;&#xA;&quot;Google : &quot; + If(bool_isRainingGoogle, &quot;oui&quot;, &quot;non&quot;) &amp;Environment.NewLine +&#xD;&#xA;&quot;Météo France : &quot; +If(bool_isRainingMF, &quot;oui&quot;, &quot;non&quot;) &amp;Environment.NewLine +&#xD;&#xA;&quot;AccuWeather : &quot; +If(bool_isRainingAW, &quot;oui&quot;, &quot;non&quot;) &amp;Environment.NewLine +&#xD;&#xA;&quot;Plein Champ : &quot; +If(bool_isRainingPC, &quot;oui&quot;, &quot;non&quot;) &amp;Environment.NewLine +&#xD;&#xA;&quot;Tameteo : &quot; +If(bool_isRainingTameteo, &quot;oui&quot;, &quot;non&quot;) &amp;Environment.NewLine +&#xD;&#xA;&quot;Chances de précipitations : A CALCULER&quot;]" />
+    <Assign sap:VirtualizedContainerService.HintSize="434,114" sap2010:WorkflowViewState.IdRef="Assign_1">
+      <Assign.To>
+        <OutArgument x:TypeArguments="x:Int32">[int32_chancesPrecipitations]</OutArgument>
+      </Assign.To>
+      <Assign.Value>
+        <InArgument x:TypeArguments="x:Int32">[((If(bool_isRainingGoogle, 1, 0) + If(bool_isRainingPC, 1, 0) + If(bool_isRainingAW, 1, 0) + If(bool_isRainingTameteo, 1, 0) + If(bool_isRainingMF, 1, 0)) * 20)]</InArgument>
+      </Assign.Value>
+    </Assign>
+    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="434,108" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;Pluie détectée :&quot; &amp;Environment.NewLine +&#xD;&#xA;&quot;Google : &quot; + If(bool_isRainingGoogle, &quot;oui&quot;, &quot;non&quot;) &amp;Environment.NewLine +&#xD;&#xA;&quot;Météo France : &quot; +If(bool_isRainingMF, &quot;oui&quot;, &quot;non&quot;) &amp;Environment.NewLine +&#xD;&#xA;&quot;AccuWeather : &quot; +If(bool_isRainingAW, &quot;oui&quot;, &quot;non&quot;) &amp;Environment.NewLine +&#xD;&#xA;&quot;Plein Champ : &quot; +If(bool_isRainingPC, &quot;oui&quot;, &quot;non&quot;) &amp;Environment.NewLine +&#xD;&#xA;&quot;Tameteo : &quot; +If(bool_isRainingTameteo, &quot;oui&quot;, &quot;non&quot;) &amp;Environment.NewLine +&#xD;&#xA;&quot;Chances de précipitations : &quot; + int32_chancesPrecipitations.ToString()  + &quot;%&quot; &amp;Environment.NewLine +&#xD;&#xA;if(int32_chancesPrecipitations &gt; 50, &quot;Nous recommandons un parapuie !&quot;, &quot;Nous recommandons une casquette !&quot;)]" />
   </Sequence>
 </Activity>
